# soft-delete

./: .gitignore  README.md  setup.cfg
docs/: PACKAGE_AND_INSTALL.md  README.md
softdelete/: apps.py  models.py
